Avancement enfin dans la structure des donn&eacute;es. Sync

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,33 @@ INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${LUS_INCLUDE_DIR})
 message("PREFIX:" ${CMAKE_INSTALL_PREFIX})
 message("MODULES:" ${CMAKE_MODULE_PATH})
 
-FILE(GLOB LCMAKE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.c++)
 
-add_executable(LCMake.app ${LCMAKE_SRC})
 
-target_link_libraries(LCMake.app ${LUS_LIBRARY})
 
-INSTALL(TARGETS LCMake.app RUNTIME DESTINATION LCMake.app/Bin )
-#INSTALL(FILES ${LUS_HDR} DESTINATION  Libraries/Lus/Include )
+FILE(GLOB LCMAKE_SRC
+
+    File.c++
+)
+
+FILE(GLOB LCMAKE_HDR
+
+    File.h
+)
+
+
+add_library(
+    LCMakeLib
+    SHARED
+    ${LCMAKE_SRC}
+)
+
+target_link_libraries(LCMakeLib ${LUS_LIBRARY})
+
+add_executable(LCMake.App main.c++)
+target_link_libraries(LCMake.App ${LUS_LIBRARY})
+
+
+INSTALL(TARGETS LCMake.App RUNTIME DESTINATION Libraries/LCMakeLib/Bin )
+
+INSTALL(FILES ${LCMAKE_HDR} DESTINATION  Libraries/LCMakeLib/Include )
+INSTALL(FILES FindLCMakeLib.cmake DESTINATION  ${CMAKE_MODULE_PATH} )
